# Mechanism-Reduction-0d-1d

./: .gitattributes  .gitignore  PROJECT_STRUCTURE.md  README.md  best_selection.txt  comparison_summary.csv  main.py  metrics.py  plot_results.py  progress_variable.py  pytest.ini  requirements.txt  setup.py  timescales.py  tree_L4.txt
hp_pox_0d_1d/: DEV_NOTES.md  analyze_mechanism_reduction.py  comparison_sandiego_baseline.csv  comparison_summary.csv  config.yaml  debug_case.py  debug_wall_setup.py  diagnostic_config.py  diagnostic_psr.py  gri30.yaml  main.py  mechanism_smoketest.py  pfr_sweep_results.csv  plot_adaptive_chemistry.py  plot_results.py  pyproject.toml  reduction_orchestrator.py  run_comprehensive_validation.py  run_ga_improved.py  run_hp_pox.py  run_sanity_test.py  test_cantera_heat_sign.py  test_closed.yaml  test_constraints.py  test_fixed_psr.py  test_hybrid_reduction.py  test_psr_robust.py  test_single_case.py  verify_fix.py
hp_pox_0d_1d/ARAMCOMECH3.0/: thermodynamics.yaml
hp_pox_0d_1d/USC_MECH_II/: mechanism.yaml.backup  thermdat.yaml  uscmech2.yaml
hp_pox_0d_1d/comparison/: kpi_compare_gri.csv
hp_pox_0d_1d/comparison_gri_v2/: kpi_compare_gri.csv  kpi_compare_gri_v2.csv
hp_pox_0d_1d/diagnostics/: T_ad_A_case1_richter.json  T_ad_A_case4_richter.json  T_ad_B_case1_134L.json  T_ad_B_case4_134L.json  adiabatic_summary.json
hp_pox_0d_1d/hp_pox_ga_gnn/: __init__.py  api.py
hp_pox_0d_1d/hp_pox_physics/: __init__.py  config_cases.py  config_reference.py  data_api.py  diagnostics.py  hp_pox_model.py  mixing.py  pfr.py  premix_init.py  psr.py  (+6 more)
(+29771 files in other folders)
