[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hp-pox-physics"
version = "1.0.0"
description = "HP-POX 0D-1D Reactor Model with proper physics and validation"
authors = [{name = "HP-POX Team"}]
requires-python = ">=3.11"
dependencies = [
    "cantera>=3.0",
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "pyyaml>=6.0",
    "scipy>=1.7",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive_*
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
